# market-signals

./: .gitignore  Dockerfile  README.md  SPEC.md  pyproject.toml
.github/workflows/: test.yml
market_signals/: __main__.py  api.py  config.py  correlator.py  db.py  news.py  poller.py
static/: app.js  index.html  style.css
tests/: test_api.py  test_correlator.py  test_db.py  test_news.py  test_poller.py
